--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
+    "@metamask/sdk-react": "^0.14.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
